# showdown-rs

./: .gitignore  Cargo.toml  README.md
data/: .gitignore  viper.txt
examples/: .env.example  example_config.toml
src/: bot.rs  config.rs  error.rs  lib.rs  message.rs  plugin.rs  target.rs
src/plugin/: meme.rs  mod.rs  viper.rs
src/test/: test_insensitive.toml  test_sensitive.toml
